Refactor handlers and data
