# product-api/handlers/get.go
@@ -1,0 +1,59 @@
+package handlers
+
+import (
+	"microservices/product-api/data"
+	"net/http"
+)
+
+// swagger:route GET /products products listProducts
+// Returns a list of products
+// responses:
+// 200: productsResponse
+
+// GetProducts retrieves all the products
+func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
+	p.l.Println("Handle GET Products")
+
+	products := data.GetProducts()
+	err := data.ToJSON(products, rw)
+	if err != nil {
+		http.Error(rw, "Unable to marshal json", http.StatusInternalServerError)
+	}
+}
+
+// swagger:route GET /products/{id} products listSingle
+// Return a list of products from the database
+// responses:
+// 200: productResponse
+// 404: errorResponse
+
+// GetSingleProduct handles GET requests
+func (p *Products) GetSingleProduct(rw http.ResponseWriter, r *http.Request) {
+	id := getProductID(r)
+
+	p.l.Println("[DEBUG] Get record with id: ", id)
+
+	prod, err := data.GetProductByID(id)
+
+	switch err {
+	case nil:
+	case data.ErrProductNotFound:
+		p.l.Println("[ERROR] Fetching product", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	default:
+		p.l.Println("[ERROR] Fetching product", err)
+
+		rw.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		return
+	}
+
+	err = data.ToJSON(prod, rw)
+	if err != nil {
+		// we should never be here but log the error just incase
+		p.l.Println("[ERROR] Serializing product", err)
+	}
+}
