# product-api/handlers/post.go
@@ -1,0 +1,22 @@
+package handlers
+
+import (
+	"microservices/product-api/data"
+	"net/http"
+)
+
+// swagger:route POST /products products createProduct
+// Create a new product
+//
+// responses:
+//	200: productResponse
+//  422: errorValidation
+//  501: errorResponse
+
+// AddProduct adds a new product
+func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
+	p.l.Println("Handle POST Products")
+
+	prod := r.Context().Value(KeyProduct{}).(data.Product)
+	data.AddProduct(prod)
+}
