# product-api/handlers/put.go
@@ -1,0 +1,30 @@
+package handlers
+
+import (
+	"microservices/product-api/data"
+	"net/http"
+)
+
+// swagger:route PUT /products products updateProduct
+// Update a products details
+//
+// responses:
+// 201: noContentResponse
+// 404: errorResponse
+// 422: errorValidation
+
+// UpdateProduct updates a saved product
+func (p *Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
+	prod := r.Context().Value(KeyProduct{}).(data.Product)
+	p.l.Println("[DEBUG] updating record id", prod.ID)
+
+	err := data.UpdateProduct(prod)
+	if err == data.ErrProductNotFound {
+		p.l.Println("[ERROR] product not found", err)
+
+		rw.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: "Product not found in database"}, rw)
+		return
+	}
+	rw.WriteHeader(http.StatusNoContent)
+}
